[package]
name = "snake_vulkan"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
rand = "0.8.5"
# vulkan stuff
vulkano = "0.29.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29"
bytemuck = "1.8.0"
winit = "0.26"
image = "0.24"